--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "pyaudio-0.2.4.tar.gz": edf13eee4252f05d669c9ae33ecfed08316b72fa
+  pyaudio-0.2.8.tar.gz: e59540ba8cd35c9489a84688e84146e8177dd446
